# machine-unlearning

./: .gitignore  .pre-commit-config.yaml  README.md  chart.py  clean.sh  data.py  download.sh  dummy.json  eval.py  eval_tb_deprecated.py  imagenet_classes.py  main.py  model.py  pipeline.py  pyproject.toml  reporter.py  run.sh  sampler.py  trainer.py  utils.py  utils_data.py  visualize.py
beta_features/: ddp.py  parallel.py  track_training.py
configs/: config.yaml  hyperparameters.py  template.py
dev/: dev_docs.md
tests/: test_data.py  test_eval.py  test_gcn.py  test_model.py  test_reporter.py  test_trainer.py  test_utils_data.py
