[project]
name = "mimu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "hydra-core>=1.3.2",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "mypy>=1.17.0",
    "notebook>=7.4.4",
    "omegaconf>=2.3.0",
    "pytest>=8.4.1",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
