[project]
name = "mimu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.10.0",
    "altair[all]>=5.5.0",
    "autoflake>=2.3.1",
    "black>=25.1.0",
    "datasets>=4.0.0",
    "dotenv>=0.9.9",
    "huggingface-hub[cli]>=0.34.1",
    "hydra-core>=1.3.2",
    "isort>=6.0.1",
    "loguru>=0.7.3",
    "matplotlib>=3.10.3",
    "memray>=1.18.0",
    "mypy>=1.17.0",
    "notebook>=7.4.4",
    "omegaconf>=2.3.0",
    "pandas>=2.3.1",
    "py-spy>=0.4.1",
    "pynvml>=12.0.0",
    "pytest>=8.4.1",
    "qwen-vl-utils[decord]==0.0.8",
    "ray[default,train]>=2.48.0",
    "scipy>=1.16.1",
    "streamlit>=1.48.0",
    "tabulate>=0.9.0",
    "tensorboard>=2.20.0",
    "torch>=2.7.1",
    "torch-geometric>=2.6.1",
    "torchinfo>=1.8.0",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
    "trackio>=0.2.2",
    "transformers>=4.55.0",
]

[dependency-groups]
dev = [
    "pre-commit>=4.2.0",
]
